# dagster-playground

./: Dockerfile  README.md  dagster-dagit-start.sh  dagster.yaml  pyproject.toml  workspace.yaml
dags/: csv_processor.py  kafka_writer.py
data/: example_numbers.csv  result_report.csv
tests/: csv_processor_test.py
